--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,34 @@
                     <button type="submit">Login</button>
                     <button type="submit"> Sing in</button>
                 </form>
-                
-                <nav class="pesquisa">
 
+                <nav class="pesquisa">
+                    Pesquisa
+                    <input text="text" placeholder="Procure sua receita">
                 </nav>
             </section>
             <section class="menu">
-
+                <h1>
+                    <button>
+                        Home
+                    </button>
+                    <br>
+                    <button>
+                        Historico
+                    </button>
+                    <br>
+                    <button>
+                        Mais visitados
+                    </button>
+                </h1>
+                <h2>
+                    Inscriçôes
+                </h2>
+                <ul>
+                    <li>Nome.</li>
+                    <li>Nome.</li>
+                    <li>Nome</li>
+                </ul>
             </section>
         </div>
     </header>
