Add exempl de receitas mais acessadas

--- a/public/index.html
+++ b/public/index.html
@@ -54,10 +54,15 @@
     </header>
     <!--Receitas-->
     <main>
+        <img class="destaque" src="https://picsum.photos/900/400" alt="">
 
         <section class="mais">
             <article>
-
+                <h3>Mais acessados</h3>
+                <img class="recitas" src="https://picsum.photos/300/200" alt="">
+                <img class="recitas" src="https://picsum.photos/300/200" alt="">
+                <img class="recitas" src="https://picsum.photos/300/200" alt="">
+                <img class="recitas" src="https://picsum.photos/300/200" alt="">
             </article>
         </section>
         <section class="recomen">
