--- a/public/index.html
+++ b/public/index.html
@@ -64,12 +64,15 @@
                 <img class="recitas" src="https://picsum.photos/300/200" alt="">
                 <img class="recitas" src="https://picsum.photos/300/200" alt="">
             </article>
-        </section>
-        <section class="recomen">
-            <article>
-
-            </article>
-        </section>
+            <section class="recomen">
+                <article>
+                    <h3>Recomendados</h3>
+                    <img class="recitas" src="https://picsum.photos/300/200" alt="">
+                    <img class="recitas" src="https://picsum.photos/300/200" alt="">
+                    <img class="recitas" src="https://picsum.photos/300/200" alt="">
+                    <img class="recitas" src="https://picsum.photos/300/200" alt="">
+                </article>
+            </section>
     </main>
     <footer class="rodape">
 
