--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,13 @@
             </section>
     </main>
     <footer class="rodape">
-
+        <h3>
+            Contatos
+        </h3>
+        <p>xxxxxxx@gmail.com <br>(xx)xxxxxx-xxxx<br>(xx)xxxxxx-xxxx</p>
+        <h4>
+            Um site feito por Vitor Miguel Oliveira Alves
+        </h4>
     </footer>
 
 </body>
